<?xml version="1.0"?>
<package format="2">
  <name>fast</name>
  <version>0.0.0</version>
  <description>The fast package</description>
  <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>
  
  <license>RPG</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>