<?xml version="1.0"?>
<package>
  <name>nanoflann_catkin</name>
  <version>0.0.0</version>
  <description>The nanoflann_catkin package</description>
  <maintainer email="cfo@todo.todo">cfo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>