<?xml version="1.0"?>
<package format="2">
  <name>numpy_eigen</name>
  <version>0.0.1</version>
  <description>numpy_eigen</description>

  <maintainer email="mathias.buerki@mavt.ethz.ch">Mathias Buerki</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>catkin_boost_python_buildtool</depend>
  <depend>eigen_catkin</depend>
</package>
