<package>
  <name>protobuf_catkin</name>
  <version>3.0.0</version>
  <description>protobuf_catkin</description>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- OPTIONAL!!! Refers to catkin_grpc from CogRob: https://github.com/CogRob/catkin_grpc -->
  <build_depend>grpc</build_depend>
</package>
