<?xml version="1.0"?>
<package format="2">
  <name>dv_ros_tracker</name>
  <version>1.3.0</version>
  <description>The dv_ros_tracker package</description>

  <maintainer email="support@inivation.com">iniVation</maintainer>

  <license>Apache2.0</license>

  <url type="website">https://dv-processing.inivation.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dv_ros_msgs</build_depend>
  <build_depend>dv_ros_messaging</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dv_ros_capture</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dv_ros_msgs</exec_depend>
  <exec_depend>dv_ros_messaging</exec_depend>
  <exec_depend>dv_ros_capture</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
