<?xml version="1.0"?>
<package format="2">
  <name>dv_ros_visualization</name>
  <version>1.3.0</version>
  <description>Nodes for previewing event data streams with dv::processing library.</description>

  <maintainer email="support@inivation.com">iniVation</maintainer>

  <license>Apache2.0</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/dv_ros_cpp</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dv_ros_msgs</build_depend>
  <build_depend>dv_ros_messaging</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dv_ros_msgs</exec_depend>
  <exec_depend>dv_ros_messaging</exec_depend>
  <exec_depend>dv_ros_capture</exec_depend>
  <exec_depend>dv_ros_accumulation</exec_depend>

</package>
